--- a/src/front/index.css
+++ b/src/front/index.css
@@ -128,7 +128,7 @@
 }
 
 body {
-  background-color: #F7F4F3; 
+  background-color: #0f1120; 
   margin: 0;                 
   min-height: 100vh;         
 }
