--- a/src/front/index.css
+++ b/src/front/index.css
@@ -3,6 +3,7 @@ html {
   overflow-x: hidden !important;
   font-size: 16px;
 }
+
 .btn-dark:hover {
   background-color: #0A0A0A !important;
   border-color: #424242 !important;
@@ -93,7 +94,7 @@ body {
 }
 /* :milky_way: Card “Stable” Global Style - MeetFit */
 .profile-stable-card {
-  background: linear-gradient(145deg, #1F2124, #111214);
+  background: linear-gradient(145deg, #20232D, #171a24);
   border-radius: 22px !important;
   border-top: 4px solid #817DF9;
   box-shadow: 0 4px 22px #817df9 !important;
@@ -121,7 +122,7 @@ body {
 .profile-stable-card form input,
 .profile-stable-card form select,
 .profile-stable-card form textarea {
-  background: #252729;
+  background: #2a2d3a;
   color: white;
   border: 1px solid #656565;
   border-radius: 8px;
@@ -130,6 +131,17 @@ body {
 .profile-stable-card form textarea::placeholder {
   color: #9F9F9F;
 }
+
+.custom-modal-header {
+  background-color: #817DF9 !important; 
+  color:#E3FE18 !important;            
+  border-top: 4px solid #605af8;          
+}
+.custom-modal-body {
+  background: linear-gradient(145deg, #20232D, #171a24);
+  color: white !important;              
+}
+
 /* === :crystal_ball: INPUT / SELECT NEÓN UNIFICADO === */
 .mf-neon-input {
   width: 90% !important;
@@ -392,15 +404,25 @@ body {
 .bg_PopUp {
   background-color: #0F1B2B !important;
 }
+.custom-bg {
+  background: linear-gradient(145deg, #20232D, #171a24);
+}
+.custom-container-bg {
+  
+  color: white;            
+  padding: 20px;
+  border-radius: 10px;      
+}
+
 ::-webkit-scrollbar {
   width: 6px;
 }
 ::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.3);
+  background: #E3FE18;
   border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(255, 255, 255, 0.5);
+  background: #E3FE18;
 }
 .event-scroll-wrapper {
   width: 100%;
