--- a/src/front/index.css
+++ b/src/front/index.css
@@ -1386,7 +1386,7 @@
   background: #d48a2a;
 }
 .progress-fill.is-blue {
-  background: #2e9ca0;
+  background: #e1c719;
 }
 .progress-fill.is-purple {
   background: #533946;
